--- a/HitherAndThither/index.html
+++ b/HitherAndThither/index.html
@@ -2,8 +2,70 @@
 <script src="d3/d3.v3.min.js"></script>
 <script src="d3/topojson.v1.min.js"></script>
 <script src="js/datamaps.world.min.js"></script>
+<h1>Hither and Thither</h1>
 <div id="container" style="position: relative; width: 800px; height: 500px;"></div>
 <script>
-    var map = new Datamap({element: document.getElementById('container')});
+var map = new Datamap({
+  element: document.getElementById('container'),
+  fills: { "bubble": "#1ff", "x": "#f1f" },
+  bubbleConfig: {
+            borderWidth: 2,
+            borderColor: '#FFFFFF',
+            popupOnHover: false,
+            popupTemplate: function(geography, data) {
+              return '<div class="hoverinfo"><strong>' + data.name + '</strong></div>';
+            },
+            fillOpacity: 0.75,
+            highlightOnHover: true,
+            highlightFillColor: '#FC8D59',
+            highlightBorderColor: 'rgba(250, 15, 160, 0.2)',
+            highlightBorderWidth: 2,
+            highlightFillOpacity: 0.85
+        }
+});
+
+d3.csv('data/countries.csv', function(error, countries) {
+
+  countries.forEach(function (c) {
+    c.radius = 10;
+    c.fillKey = "bubble";
+    var coord = map.latLngToXY(c.latitude,c.longitude);
+    c.x = coord[0];
+    c.y = coord[1];
+  });
+  // map.bubbles(countries);
+
+  var cc = d3.select("svg").data(countries, function(c) { console.log(c); return c.country; })
+    .enter()
+      .append("circle")
+      .attr("cx", function (c) { return c.x; })
+      .attr("cy", function (c) { return c.y; })
+      .attr("r", 0)
+      .style("fill", "#f1f");
+
+  d3.csv('data/340109.csv', function(error, data) {
+    // data.forEach(function (m, i) {
+    var m = data[0], i = 0;
+      countries.forEach(function (c) { c.fillKey="x"; c.radius = bsize(m[c.country]);
+console.log(map.latLngToXY(c.latitude,c.longitude));
+ });
+      // map.bubbles(countries);
+
+    // m = data[0];
+      countries.forEach(function (c) { c.radius = 10+bsize(m[c.country]); });
+console.log("XXX");
+      map.bubbles(countries);
+console.log("YYY");
+    // })
+  })
+
+})
+
+function bsize(n) {
+  return n < 1000 ? 5 : 20;
+}
+
+// map.bubbles(bombs, {});
+
 </script>
 
