--- a/HitherAndThither/index.html
+++ b/HitherAndThither/index.html
@@ -1,14 +1,16 @@
 <html>
 <title>Hither and Thither</title>
+
 <script src="d3/d3.v3.min.js"></script>
 <script src="d3/topojson.v1.min.js"></script>
 <script src="js/datamaps.world.min.js"></script>
 <h1>Hither and Thither  <span id="date">None</span></h1>
-<div id="container" style="position: relative; width: 1000; height: 600;">
+<div id="container" style="position: relative; width: 95%; height: 80%;">
 </div>
 <script>
 
-var map = new Datamap({
+var ausLat = [-25.27439, 133.775136],
+  map = new Datamap({
   element: document.getElementById('container'),
   projection: 'mercator',
   setProjection: function(element, options) {
@@ -42,28 +44,31 @@ var map = new Datamap({
         highlightBorderWidth: 2
     },
   bubbleConfig: {
-            borderWidth: 2,
-            borderColor: '#FFFFFF',
-            popupOnHover: false,
-            popupTemplate: function(geography, data) {
-              return '<div class="hoverinfo"><strong>' + data.name + '</strong></div>';
-            },
-            fillOpacity: 0.75,
-            highlightOnHover: true,
-            highlightFillColor: '#FC8D59',
-            highlightBorderColor: 'rgba(250, 15, 160, 0.2)',
-            highlightBorderWidth: 2,
-            highlightFillOpacity: 0.85
-        }
+        borderWidth: 2,
+        borderColor: '#FFFFFF',
+        popupOnHover: false,
+        popupTemplate: function(geography, data) {
+          return '<div class="hoverinfo"><strong>' + data.name + '</strong></div>';
+        },
+        fillOpacity: 0.75,
+        highlightOnHover: true,
+        highlightFillColor: '#FC8D59',
+        highlightBorderColor: 'rgba(250, 15, 160, 0.2)',
+        highlightBorderWidth: 2,
+        highlightFillOpacity: 0.85
+    }
 });
 
+var arrivals = false;
+
 d3.csv('data/countries.csv', function(error, csvData) {
+  d3.csv(arrivals ? 'data/340105.csv' : 'data/340109.csv', function(error, months) {
 
   var countries = csvData
     .filter(function (c) {
-      return c.country.indexOf("Total") < 0 && c.country.indexOf("Other") < 0;
+      return typeof months[0][c.country] !== "undefined" && c.country.indexOf("Total") < 0 && c.country.indexOf("Other") < 0;
     }),
-    aus = map.latLngToXY(-25.27439, 133.775136);
+    aus = map.latLngToXY(ausLat[0], ausLat[1]);
 
   countries
     .forEach(function (c) {
@@ -71,10 +76,10 @@ d3.csv('data/countries.csv', function(error, csvData) {
       c.x = coord[0];
       c.y = coord[1];
     });
-  // map.bubbles(countries);
 
   var g = d3.select("svg").append("g");
   var dd = d3.select("#date");
+/*
   var pp = g.selectAll(".route")
     .data(countries, function(c,i) { if (c) {return c.country;}else{console.log(i); return c;} })
     .enter()
@@ -83,6 +88,7 @@ d3.csv('data/countries.csv', function(error, csvData) {
         .attr("stroke", "#1f1")
         .attr("stroke-width", 20)
         .attr("d", function(c) { return "M "+aus[0]+" "+aus[1]+" L "+c.x+" "+c.y; });
+*/
 
   var cc = g.selectAll(".bub")
     .data(countries, function(c,i) { if (c) {return c.country;}else{console.log(i); return c;} })
@@ -113,11 +119,9 @@ d3.csv('data/countries.csv', function(error, csvData) {
 
   var flyTime = 1000, growTime = 1000, resetTime = 100, time = resetTime+flyTime+growTime, delta = 1;
 
-  d3.csv('data/340109.csv', function(error, months) {
     months
       // .filter(function (m, i) { return i < 40; })
       .forEach(function (m, i) {
-console.log("M: " + i + " " + (i*time) + " " + (resetTime+(i*time)) + " " + (flyTime+(i*time)));
       // change month
       dd.transition()
         .delay(i*time)
@@ -127,15 +131,15 @@ console.log("M: " + i + " " + (i*time) + " " + (resetTime+(i*time)) + " " + (fly
       ff.transition()
         .delay(resetTime+(i*time))
         .duration(flyTime)
-        .attr("cx", function(d) { return d.x; })
-        .attr("cy", function(d) { return d.y; })
+        .attr("cx", function(d) { return arrivals ? aus[0] : d.x; })
+        .attr("cy", function(d) { return arrivals ? aus[1] : d.y; })
         .attr("r", 3)
         .each("start", function () {
           // reset to Australia
           d3.select(this)
             .attr("r", 5)
-            .attr("cx", aus[0])
-            .attr("cy", aus[1]);
+            .attr("cx", function(d) { return arrivals ? d.x : aus[0]; })
+            .attr("cy", function(d) { return arrivals ? d.y : aus[1]; });
         })
         .each("end", function () {
           // shrink at end
@@ -162,7 +166,7 @@ console.log("M: " + i + " " + (i*time) + " " + (resetTime+(i*time)) + " " + (fly
 })
 
 function bsize(n) {
-  return n < 100000 ? Math.log(1+n)/Math.log(1.6) : 50;
+  return typeof n === "undefined" ? 0 : (n < 100000 ? Math.log(1+n)/Math.log(1.6) : 50);
 }
 
 // map.bubbles(bombs, {});
