--- a/HitherAndThither/index.html
+++ b/HitherAndThither/index.html
@@ -4,7 +4,9 @@
 <script src="d3/d3.v3.min.js"></script>
 <script src="d3/topojson.v1.min.js"></script>
 <script src="js/datamaps.world.min.js"></script>
-<h1>Hither and Thither  <span id="date">None</span></h1>
+<h1>Hither and Thither: <span id="date">None</span></h1>
+  <input type="radio" name="direction" id="arrivalDir" value="Arrivals" checked>Arrivals
+  <input type="radio" name="direction" id="departureDir" value="Departures">Departures
 <div id="container" style="position: relative; width: 95%; height: 80%;">
 </div>
 <script>
@@ -59,11 +61,25 @@ var ausLat = [-25.27439, 133.775136],
     }
 });
 
-var arrivals = false;
 
 d3.csv('data/countries.csv', function(error, csvData) {
-  d3.csv(arrivals ? 'data/340105.csv' : 'data/340109.csv', function(error, months) {
+  d3.csv('data/340105.csv', function(error, arrivalsMonths) {
+    d3.csv('data/340109.csv', function(error, departuresMonths) {
+      d3.selectAll("input").on("change", function () {
+        var arrivals = document.getElementById("arrivalDir").checked;
+        process(csvData, arrivals ? arrivalsMonths : departuresMonths, arrivals);
+      });
 
+      var arrivals = document.getElementById("arrivalDir").checked;
+      process(csvData, arrivals ? arrivalsMonths : departuresMonths, arrivals);
+    })
+  })
+})
+
+var dd, cc, ff;
+dd = d3.select("#date");
+
+function process(csvData, months, arrivals) {
   var countries = csvData
     .filter(function (c) {
       return typeof months[0][c.country] !== "undefined" && c.country.indexOf("Total") < 0 && c.country.indexOf("Other") < 0;
@@ -77,8 +93,12 @@ d3.csv('data/countries.csv', function(error, csvData) {
       c.y = coord[1];
     });
 
+  if (dd) dd.interrupt().transition();
+  if (ff) ff.interrupt().transition();
+  if (cc) cc.interrupt().transition();
+  // d3.timer.flush();
+
   var g = d3.select("svg").append("g");
-  var dd = d3.select("#date");
 /*
   var pp = g.selectAll(".route")
     .data(countries, function(c,i) { if (c) {return c.country;}else{console.log(i); return c;} })
@@ -90,8 +110,9 @@ d3.csv('data/countries.csv', function(error, csvData) {
         .attr("d", function(c) { return "M "+aus[0]+" "+aus[1]+" L "+c.x+" "+c.y; });
 */
 
-  var cc = g.selectAll(".bub")
-    .data(countries, function(c,i) { if (c) {return c.country;}else{console.log(i); return c;} })
+  var bub = g.selectAll(".bub")
+    .data(countries, function(c,i) { if (c) {return c.country;}else{console.log(i); return c;} });
+  cc = bub
     .enter()
       .append("circle")
       .attr("class", "bub")
@@ -103,9 +124,11 @@ d3.csv('data/countries.csv', function(error, csvData) {
       .attr("r", 0)
       .style("fill", "#f1f")
       .each(function () { d3.select(this).append("title").text(function(c) { return c.country; }) });
+  bub.exit().remove();
 
-  var ff = g.selectAll(".fly")
-    .data(countries, function(c,i) { if (c) {return c.country;}else{console.log(i); return c;} })
+  var fly = g.selectAll(".fly")
+    .data(countries, function(c,i) { if (c) {return c.country;}else{console.log(i); return c;} });
+  ff = fly
     .enter()
       .append("circle")
       .attr("class", "fly")
@@ -116,16 +139,16 @@ d3.csv('data/countries.csv', function(error, csvData) {
       .attr("stroke-width", 1)
       .attr("r", 5)
       .style("fill", "#1ff");
+  fly.exit().remove();
 
   var flyTime = 1000, growTime = 1000, resetTime = 100, time = resetTime+flyTime+growTime, delta = 1;
 
-    months
-      // .filter(function (m, i) { return i < 40; })
-      .forEach(function (m, i) {
+  months
+    .forEach(function (m, i) {
       // change month
       dd.transition()
         .delay(i*time)
-        .text(m.month);
+        .text((arrivals ? "Inbound visitors in " : "Outbound Aussies in ") + m.month);
 
       // fly to destination
       ff.transition()
@@ -161,9 +184,7 @@ d3.csv('data/countries.csv', function(error, csvData) {
         .attr("r", function(d) { return bsize(m[d.country]); });
 
     })
-  })
-
-})
+}
 
 function bsize(n) {
   return typeof n === "undefined" ? 0 : (n < 100000 ? Math.log(1+n)/Math.log(1.6) : 50);
