--- a/HitherAndThither/index.html
+++ b/HitherAndThither/index.html
@@ -185,6 +185,17 @@ function process(csvData, months, arrivals) {
         .delay(flyTime+(i*time))
         .duration(growTime)
         .attr("opacity", 0.7)
+        .style("fill", function (d) {
+          var thisSize = bsize(m[d.country]),
+              prevSize = i == 0 ? thisSize : bsize(months[i-1][d.country]);
+          if (thisSize / prevSize > 1.1) {
+            return "#f11";
+          } else if (thisSize / prevSize < 0.9) {
+            return "#11f";
+          } else {
+            return "#ff1";
+          }
+        })
         .attr("r", function(d) { return bsize(m[d.country]); });
 
     })
