vic-builder Web site design

--- a/vic-builder/www/index.html
+++ b/vic-builder/www/index.html
@@ -1,5 +1,16 @@
-<p>
-vic-builder
-</p>
+<HTML>
 
-<A HREF="api/postcodes.json">postcodes</A>
+<HEAD>
+  <TITLE>Victoria Builder</TITLE>
+  <LINK REL="stylesheet" TYPE="text/css" HREF="style.css">
+</HEAD>
+
+<frameset rows="355,*,100" frameborder=0>
+  <frame src="header.html" name="header">
+  <frame src="default.html" name="content">
+  <frame src="footer.html" name="footer">
+</frameset> 
+
+<A HREF="api/postcodes.json">all postcodes</A>
+
+</HTML>
