--- a/vic-builder/www/header.html
+++ b/vic-builder/www/header.html
@@ -34,7 +34,7 @@ Matter of fact, you've got it now.
 </P>
 
 <P>
-Search 537,631 building upgrades 
+Explore all 537,631 building modifications across Victoria since 2009.
 </P>
 
 <P>
