--- a/research-funding/src/main/webapp/home.html
+++ b/research-funding/src/main/webapp/home.html
@@ -4,13 +4,34 @@
 <!-- <script src="./jquery-2.1.1.js"></script> -->
 <script src="./d3.v3.js"></script>
 <style type="text/css">
-body{font-family: Arial, sans-serif;font-size:10px;}
-.axis path,.axis line {fill: none;stroke:#b6b6b6;shape-rendering: crispEdges;}
-/*.tick line{fill:none;stroke:none;}*/
-.tick text{fill:#999;}
-g.journal.active{cursor:pointer;}
-text.label{font-size:12px;font-weight:bold;cursor:pointer;}
-text.value{font-size:12px;font-weight:bold;}
+body {
+  font-family: Arial, sans-serif;
+  font-size: 10px;
+}
+.axis path, .axis line {
+  fill: none;
+  stroke: #b6b6b6;
+  shape-rendering: crispEdges;
+}
+/*.tick line {
+  fill: none;
+  stroke: none;
+}*/
+.tick text {
+  fill: #999;
+}
+g.journal.active {
+  cursor: pointer;
+}
+text.label {
+  font-size: 12px;
+  font-weight: bold;
+  cursor: pointer;
+}
+text.value {
+  font-size: 12px;
+  font-weight: bold;
+}
 </style>
 </head>
 <body>
