Vic-builder website

--- a/vic-builder/www/about.html
+++ b/vic-builder/www/about.html
@@ -7,12 +7,38 @@
 
 <BODY>
 
-Attribution:
+<P>
+Victoria Builder turned this, into this:
+</P>
+
+<IMG CLASS="spreadsheet" SRC="images/spreadsheet.jpg">
+
+<P>
+Attributions:
+<P>
+
+<UL>
+
+<LI><A TARGET="_new" HREF="https://www.data.vic.gov.au/tag/Building+Activity">State Government of Victoria</A>
+<LI><A TARGET="_new" HREF="http://www.vba.vic.gov.au/">Victorian Building Authority</A>
+<LI><A TARGET="_new" HREF="http://maps.google.com">Google Maps</A>
+<LI><A TARGET="_new" HREF="https://www.google.com/maps/views/streetview">Google StreetView</A>
+<LI><A TARGET="_new" HREF="http://trove.nla.gov.au">Trove</A>.
+<LI>We drew inspiration from <A HREF="http://robotflaneur.com/">Robot Flaneur</A>.
+
+</UL>
+
+<P>
+Tools:  Python, MySQL, Microsoft Excel, PHP, Google APIs (Geocode, StreetView, Maps)
+</P>
 
 <A TARGET="_new" HREF="http://ehive.com/account/4002/object/75178"><IMG SRC="http://f1.ehive.com/4002/1/101socm_17nb_l.jpg"></A>
 
 <A TARGET="_new" HREF="http://trove.nla.gov.au/work/176324406?q=+victoria+bitter&c=picture&versionId=192035472"><IMG SRC="http://digital.slv.vic.gov.au/webclient/StreamGate?folder_id=200&dvs=1405165638508~966"></A>
 
+</BODY>
+
+</HTML>
 
 </BODY>
 
