--- a/vic-builder/www/explore.html
+++ b/vic-builder/www/explore.html
@@ -7,15 +7,15 @@
 
 <BODY>
 
+<DIV CLASS="entry_dropshadow"><DIV CLASS="entry red_border">
+<SPAN CLASS="entry_description_ribbon"></SPAN>
+<SPAN CLASS="entry_description">530 OXFORD STREET NORTHCOTE 3070</SPAN>
+</DIV>
+</DIV>
+
 <DIV CLASS="entry_dropshadow"><DIV CLASS="entry gold_border">
 <SPAN CLASS="rotate">blah</SPAN>
 </DIV></DIV>
-
-<DIV CLASS="entry_dropshadow"><DIV CLASS="entry red_border">
-<DIV CLASS="entry_description_ribbon"></DIV>
-<DIV CLASS="entry_description">530 OXFORD STREET NORTHCOTE 3070</DIV>
-</DIV>
-</DIV>
 
 <DIV CLASS="entry_dropshadow"><DIV CLASS="entry white_border">blah</DIV></DIV>
 <DIV CLASS="entry_dropshadow"><DIV CLASS="entry green_border">blah</DIV></DIV>
