--- a/vic-builder/www/header.html
+++ b/vic-builder/www/header.html
@@ -9,6 +9,9 @@
 
 <CENTER>
 
+<DIV CLASS="menu">
+</DIV>
+
 <TABLE>
 <TR>
 <TD HEIGHT="20" COLSPAN="2"></TD>
@@ -23,23 +26,28 @@
 <TD WIDTH="400">
 
 <P>
-Building Renovation Costs.
+Want easy access to Victorian building renovation costs?
 </P>
 
 <P>
 Some people trawl for it,<BR>
 Some people haul for it.<BR>
 There sure is a call for it.<BR>
-Matter of fact, you've got it now.
+</P>
+
+<P>
+Matter of fact, you can get it now.
 </P>
 
 <P>
 Explore all 537,631 building modifications across Victoria since 2009.
 </P>
 
-<P>
-<A TARGET="content" HREF="http://115.146.84.252/vic-builder/api/show_postcodes.php">all postcodes</A> | <A TARGET="content" HREF="about.html">ABOUT</A>
-</P>
+<A TARGET="content" HREF="explore.html">EXPLORE</A> |
+<A TARGET="content" HREF="http://115.146.84.252/vic-builder/api/show_postcodes.p
+hp">SEARCH</A> | 
+<A TARGET="content" HREF="api.html">API</A>
+<A TARGET="content" HREF="about.html">ABOUT</A>
 
 </TD>
 
