--- a/vic-builder/www/footer.html
+++ b/vic-builder/www/footer.html
@@ -5,10 +5,10 @@
   <LINK REL="stylesheet" TYPE="text/css" HREF="style.css">
 </HEAD>
 
-<BODY>
+<BODY CLASS="footer">
 
 <DIV CLASS="attribution">
-VICTORIAN BUILDER combines the publicly available online resources of <A TARGET="_new" HREF="https://www.data.vic.gov.au/tag/Building+Activity">State Government of Victoria</A> (<A TARGET="_new" HREF="http://www.vba.vic.gov.au/">Victorian Building Authority</A>), <A TARGET="_new" HREF="http://maps.google.com">Google Maps</A>, <A TARGET="_new" HREF="https://www.google.com/maps/views/streetview">Google StreetView</A>, and drawing inspiration from a <A TARGET="_new" HREF="http://TODO">photograph</A> on <A TARGET="_new" HREF="http://trove.nla.gov.au">Trove</A>.
+VICTORIA BUILDER combines the publicly available online resources of <A TARGET="_new" HREF="https://www.data.vic.gov.au/tag/Building+Activity">State Government of Victoria</A> (<A TARGET="_new" HREF="http://www.vba.vic.gov.au/">Victorian Building Authority</A>), <A TARGET="_new" HREF="http://maps.google.com">Google Maps</A>, <A TARGET="_new" HREF="https://www.google.com/maps/views/streetview">Google StreetView</A>, and drawing inspiration from a <A TARGET="_new" HREF="http://TODO">photograph</A> on <A TARGET="_new" HREF="http://trove.nla.gov.au">Trove</A>.
 </DIV>
 
 </BODY>
