--- a/vic-builder/www/index.html
+++ b/vic-builder/www/index.html
@@ -7,10 +7,8 @@
 
 <frameset rows="355,*,100" frameborder=0>
   <frame src="header.html" name="header">
-  <frame src="default.html" name="content">
+  <frame src="explore.html" name="content">
   <frame src="footer.html" name="footer">
 </frameset> 
-
-<A HREF="api/postcodes.json">all postcodes</A>
 
 </HTML>
