--- a/vic-builder/www/index.html
+++ b/vic-builder/www/index.html
@@ -5,10 +5,9 @@
   <LINK REL="stylesheet" TYPE="text/css" HREF="style.css">
 </HEAD>
 
-<frameset rows="355,*,100" frameborder=0>
+<frameset rows="355,*" frameborder=0>
   <frame src="header.html" name="header">
-  <frame src="explore.html" name="content">
-  <frame src="footer.html" name="footer">
+  <frame src="explore.php" name="content">
 </frameset> 
 
 </HTML>
