--- a/vic-builder/www/header.html
+++ b/vic-builder/www/header.html
@@ -9,9 +9,6 @@
 
 <CENTER>
 
-<DIV CLASS="menu">
-</DIV>
-
 <TABLE>
 <TR>
 <TD HEIGHT="20" COLSPAN="2"></TD>
@@ -43,9 +40,9 @@ Matter of fact, you can get it now.
 Explore all 537,631 building modifications across Victoria since 2009.
 </P>
 
-<A TARGET="content" HREF="explore.html">EXPLORE</A> |
-<A TARGET="content" HREF="http://115.146.84.252/vic-builder/api/show_postcodes.p
-hp">SEARCH</A> | 
+<A TARGET="content" HREF="explore.php">EXPLORE</A> |
+<A TARGET="content" HREF="api/show_postcodes.php">SEARCH</A> |
+<A TARGET="content" HREF="revenue.php">REVENUE DISTRIBUTION</A> |
 <A TARGET="content" HREF="api.html">API</A>
 <A TARGET="content" HREF="about.html">ABOUT</A>
 
